; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/freescale/imx/extr_imx6_anatop.c_imx6_get_cpu_clock.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/freescale/imx/extr_imx6_anatop.c_imx6_get_cpu_clock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IMX6_ANALOG_CCM_PLL_ARM = common dso_local global i32 0, align 4
@IMX6_ANALOG_CCM_PLL_ARM_DIV_MASK = common dso_local global i32 0, align 4
@imx6_anatop_sc = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @imx6_get_cpu_clock() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @imx_ccm_get_cacrr()
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* @IMX6_ANALOG_CCM_PLL_ARM, align 4
  %5 = call i32 @imx6_anatop_read_4(i32 %4)
  %6 = load i32, i32* @IMX6_ANALOG_CCM_PLL_ARM_DIV_MASK, align 4
  %7 = and i32 %5, %6
  store i32 %7, i32* %2, align 4
  %8 = load i32, i32* @imx6_anatop_sc, align 4
  %9 = load i32, i32* %1, align 4
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @cpufreq_mhz_from_div(i32 %8, i32 %9, i32 %10)
  ret i32 %11
}

declare dso_local i32 @imx_ccm_get_cacrr(...) #1

declare dso_local i32 @imx6_anatop_read_4(i32) #1

declare dso_local i32 @cpufreq_mhz_from_div(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
